<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarVehiculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:longClickable="false"
        app:title="@string/Datos_vehiculo"
        android:minHeight="?attr/actionBarSize"
        android:nestedScrollingEnabled="false"
        android:background="@null"
        android:theme="?attr/actionBarTheme"
        app:titleEnabled="false"

        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/campoTituloPublicacion"
                android:inputType="text"
                android:textColorHint="@color/blanco_campos"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:background="@drawable/edittext_background"/>


            <EditText
                android:id="@+id/textMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/campoMarca"
                android:inputType="text"
                android:textColorHint="@color/blanco_campos"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:background="@drawable/edittext_background"/>

            <EditText
                android:id="@+id/textAnio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/campoAnio"
                android:inputType="number"
                android:textColorHint="@color/blanco_campos"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:background="@drawable/edittext_background"/>

            <EditText
                android:id="@+id/textKM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/CantKm"
                android:inputType="number"
                android:textColorHint="@color/blanco_campos"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:background="@drawable/edittext_background"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/condicion"
                android:textColor="@color/blanco_campos"
                android:layout_marginTop="10dp"/>


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@id/radioNuevo"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioNuevo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/tipoNuevo"
                    android:textColor="@color/blanco_campos">

                </RadioButton>

                <RadioButton
                    android:id="@+id/radioUsado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/tipoUsado"
                    android:textColor="@color/blanco_campos">

                </RadioButton>
            </RadioGroup>

            <EditText
                android:id="@+id/textCombustible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/tipoCombustible"
                android:inputType="text"
                android:textColorHint="@color/blanco_campos"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"/>

            <EditText
                android:id="@+id/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/colorVehiculo"
                android:inputType="text"
                android:textColorHint="@color/blanco_campos"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background" />

            <EditText
                android:id="@+id/textTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/campoTelefono"
                android:inputType="number"
                android:textColorHint="@color/blanco_campos"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"/>

            <EditText
                android:id="@+id/precioVehiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/campoPrecio"
                android:inputType="numberDecimal"
                android:textColorHint="@color/blanco_campos"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background" />

            <EditText
                android:id="@+id/textDescripcion"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="top"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/descripcionArticulo"
                android:inputType="textMultiLine"
                android:textColorHint="@color/blanco_campos"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background" />


            <Button
                android:id="@+id/buttonRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:fontFamily="@font/montserrat"
                android:text="@string/botonSiguiente" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>