<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true">


<androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMusica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:longClickable="false"
        app:title="@string/Datos_vehiculo"
        android:minHeight="?attr/actionBarSize"
        android:nestedScrollingEnabled="false"
        android:background="@null"
        android:theme="?attr/actionBarTheme"
        app:titleEnabled="false"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/campoTituloPublicacion"
                android:inputType="text"
                android:textColorHint="@color/blanco_campos"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:background="@drawable/edittext_background"/>


            <EditText
                android:id="@+id/tipoInstrumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/campoTipoInstrumento"
                android:inputType="textMultiLine"
                android:textColorHint="@color/blanco_campos"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:background="@drawable/edittext_background"/>


            <EditText
                android:id="@+id/colorInstrumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/campoColor"
                android:inputType="text"
                android:textColorHint="@color/blanco_campos"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"/>

            <EditText
                android:id="@+id/textTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/campoTelefono"
                android:inputType="number"
                android:textColorHint="@color/blanco_campos"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:background="@drawable/edittext_background"/>

            <EditText
                android:id="@+id/marcaInstrumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/campoMarca"
                android:inputType="text"
                android:textColorHint="@color/blanco_campos"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"/>

            <EditText
                android:id="@+id/precioInstrumento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/campoPrecio"
                android:inputType="text"
                android:textColorHint="@color/blanco_campos"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"/>

            <EditText
                android:id="@+id/textDescripcion"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="top"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/descripcionArticulo"
                android:inputType="textMultiLine"
                android:textColorHint="@color/blanco_campos"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background" />



            <Button
                android:id="@+id/buttonRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:fontFamily="@font/montserrat"
                android:text="@string/botonSiguiente"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>